Introduce `SamlProperty` extension point
This new extension point allows to capture all advanced behaviour mutating SAML2Configuration or SAML2Client object.

This makes it easier to add new options in the plugin itself or through separate plugins.