@@ -20,16 +20,15 @@ package org.jenkinsci.plugins.saml;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.StringContains.containsString;
 import static org.mockito.Mockito.when;
-import static org.opensaml.saml.common.xml.SAMLConstants.SAML2_REDIRECT_BINDING_URI;
 
 import hudson.util.Secret;
-import jakarta.servlet.ServletException;
-import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
+import java.util.List;
 import java.util.Objects;
 import org.apache.commons.io.IOUtils;
+import org.jenkinsci.plugins.saml.properties.MaximumAuthenticationLifetime;
 import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
@@ -44,7 +43,7 @@ import org.mockito.Mockito;
 class OpenSamlWrapperTest {
 
     @Test
-    void metadataWrapper(JenkinsRule jenkinsRule) throws IOException, ServletException {
+    void metadataWrapper(JenkinsRule jenkinsRule) throws Exception {
         String metadata = IOUtils.toString(
                 Objects.requireNonNull(this.getClass()
                         .getClassLoader()
@@ -55,15 +54,12 @@ class OpenSamlWrapperTest {
                 new IdpMetadataConfiguration(metadata),
                 "displayName",
                 "groups",
-                10000,
                 "uid",
                 "email",
                 "/logout",
-                null,
-                null,
                 "none",
-                SAML2_REDIRECT_BINDING_URI,
-                java.util.Collections.emptyList());
+                List.of());
+        samlSecurity.getProperties().add(new MaximumAuthenticationLifetime(10000));
         jenkinsRule.jenkins.setSecurityRealm(samlSecurity);
         SamlSPMetadataWrapper samlSPMetadataWrapper =
                 new SamlSPMetadataWrapper(samlSecurity.getSamlPluginConfig(), null, null);
@@ -83,7 +79,7 @@ class OpenSamlWrapperTest {
     }
 
     @Test
-    void metadataWrapperWithEncryptionConfigured(JenkinsRule jenkinsRule) throws IOException, ServletException {
+    void metadataWrapperWithEncryptionConfigured(JenkinsRule jenkinsRule) throws Exception {
         String metadata = IOUtils.toString(
                 Objects.requireNonNull(this.getClass()
                         .getClassLoader()
@@ -102,15 +98,13 @@ class OpenSamlWrapperTest {
                 new IdpMetadataConfiguration(metadata),
                 "displayName",
                 "groups",
-                10000,
                 "uid",
                 "email",
                 "/logout",
-                null,
-                encryptionData,
                 "none",
-                SAML2_REDIRECT_BINDING_URI,
-                java.util.Collections.emptyList());
+                List.of());
+        samlSecurity.getProperties().add(new MaximumAuthenticationLifetime(10000));
+        samlSecurity.getProperties().add(encryptionData);
         jenkinsRule.jenkins.setSecurityRealm(samlSecurity);
         SamlSPMetadataWrapper samlSPMetadataWrapper =
                 new SamlSPMetadataWrapper(samlSecurity.getSamlPluginConfig(), null, null);
